--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,13 @@ verify_ssl = true
 setuptools = "*"
 wheel = "*"
 twine = "*"
+ipython = "*"
+pylint = "*"
 
 [packages]
 selenium = "*"
+bs4 = "*"
+browsermob-proxy = "*"
 
 [requires]
 python_version = "3.7"
